# fstags

./: .gitignore  CMakeLists.txt  run_cmake  run_cmake.ps1
headers/: data_manager.hpp  logger.hpp  program.hpp  shared_types.hpp  strong_type.hpp  user_io.hpp
sources/: data_manager.cpp  main.cpp  program.cpp  user_io.cpp
